collapsed navbar fixes

--- a/PhotoPlusFrontend/PhotoPlus/src/app/app.component.scss
+++ b/PhotoPlusFrontend/PhotoPlus/src/app/app.component.scss
@@ -15,13 +15,16 @@ $primary: rgb(36, 184, 243);
   padding: 0 0;
 }
 
-
 header {
   background: $primary;
   font-size: 18px;
   a {
     color: white;
     text-decoration: none;
+  }
+
+  a:hover {
+    color: white;
   }
 
   a.logo {
@@ -41,6 +44,11 @@ header {
   .centered-list-item{
     display: block;
     padding: 1.3rem;
+    min-width: 10rem;
+    a{
+      text-align: center;
+      color: none;
+    }
    }
 }
 
@@ -65,6 +73,15 @@ ul {
 
 .lightenDiv:hover {
   background: lighten($primary, 20%);
+}
+
+.navbar.center .navbar-inner {
+    text-align: center;
+}
+
+.navbar.center .navbar-inner .nav {
+    display:inline-block;
+    float: none;
 }
 
 .searchbar{
